# taskhub

./: .gitignore  .isort.cfg  Makefile  Makefile.in-container  README.md  pyproject.toml  taskhub.py
docker/: Dockerfile  compose-development.yml
docker/services/gunicorn/: conf.py
docker/services/nginx/development/conf.d/: local.conf
frontend/: Dockerfile
frontend/angular-app/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/angular-app/e2e/src/: app.e2e-spec.ts
frontend/angular-app/src/: index.html
frontend/angular-app/src/app/: api.service.ts  app.component.spec.ts  app.component.ts  app.module.ts  task.ts
frontend/angular-app/src/app/task-list/: task-list.component.html  task-list.component.ts
src/taskhub/: __main__.py  cli.py  manage.py
src/taskhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/taskhub/core/: admin.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
src/taskhub/core/services/: __init__.py  github.py  stdio.py  taskhub.py  taskwarrior.py
src/taskhub/taskhub/: settings.py  urls.py  wsgi.py
src/taskhub/taskhub/services/: github.py
